# XHS-StyleSearch

./: .gitignore  extract.py  index.py  pyproject.toml  readme.md  requirements.txt  search.py
xhs_stylesearch/data/: features.npy  metadata.json  xhs.index
