[project]
name = "xhs-style-search"
version = "0.1.0"
description = "XHS Style Search - CLIP-based image style retrieval"
requires-python = "==3.12.0"

dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "brotli==1.2.0",
    "certifi==2026.4.22",
    "click==8.3.3",
    "colorama==0.4.6",
    "faiss-cpu==1.13.2",
    "fastapi==0.136.1",
    "filelock==3.29.0",
    "fsspec==2026.3.0",
    "ftfy==6.3.1",
    "gradio==6.13.0",
    "gradio_client==2.5.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.11.0",
    "idna==3.13",
    "Jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.4.4",
    "orjson==3.11.8",
    "packaging==26.0",
    "pandas==3.0.2",
    "pillow==12.2.0",
    "pydantic==2.13.3",
    "pydub==0.25.1",
    "Pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.26",
    "pytz==2026.1.post1",
    "PyYAML==6.0.3",
    "regex==2026.4.4",
    "rich==15.0.0",
    "six==1.17.0",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tqdm==4.67.3",
    "typer==0.24.2",
    "typing_extensions==4.15.0",
    "uvicorn==0.46.0",
    "wcwidth==0.6.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "d05afc436d78f1c48dc0dbf8e5980a9d471f35f6" }

[tool.uv]
package = false